Beta:
- Players will no longer collide with each other.
- Changed the player spawning algorithm to be more like FIREFIGHT RELOADED's, enabling support for more map spawn entities.
- Changed the chat color from yellow to white.
- Fixed MOTDs.
- Added a custom MOTD message.
- Bots now have more varied names.
- Added dm_aerowalk by Drift.
- Improved player customization with extra upper manes, extra lower manes, and extra tails.
- Added a 3rd color choice for extra mane and tail colors.
- Added strafe jumping.
Alpha:
- Private test for player movement, player customization, bot functions, violence setting testing, and gameplay loop testing. 
- First release of the mod.